--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,22 @@
+# Core data analysis
 pandas>=1.5.0
 numpy>=1.21.0
 matplotlib>=3.5.0
 seaborn>=0.11.0
 jupyter>=1.0.0
+
+# Machine Learning & NLP
 scikit-learn>=1.0.0
 nltk>=3.6.0
 textblob>=0.17.0
+
+# Financial Data & Analysis
+yfinance>=0.2.0
+TA-Lib>=0.4.0
+pynance>=1.0.0
+
+# Visualization
+plotly>=5.0.0
+
+# Utilities
+warnings
